# dropsome

./: README.md
anchor/: .env.example  Anchor.toml  package-lock.json  package.json
anchor/app/: fetch_app_state.ts  init.ts  update.ts
anchor/programs/dropsome/: Cargo.toml
anchor/programs/dropsome/src/: errors.rs  lib.rs  states.rs
anchor/programs/dropsome/src/instructions/: claim.rs  drop.rs  init.rs  mod.rs  refund.rs  update.rs
anchor/tests/: dropsome.ts
web/: .env.example  .gitignore  package.json  tailwind.config.js
web/.cloudflare/: worker.js
web/public/: robots.txt  security.txt  site.webmanifest
web/public/.well-known/: security.txt
web/src/components/: AppBar.tsx  Claim.tsx  ContentContainer.tsx  DrawerProvider.tsx  Drop.tsx  Footer.tsx  Logo.tsx  NetworkSwitcher.tsx  Notification.tsx  ReceiverDisclaimerDialog.tsx  Refund.tsx  RequestAirdrop.tsx  SendTransaction.tsx  SendVersionedTransaction.tsx  SenderDisclaimerDialog.tsx  SignActionLoader.tsx  SignMessage.tsx
web/src/components/nav-element/: index.tsx
web/src/contexts/: ContextProvider.tsx  NetworkConfigurationProvider.tsx
web/src/idl/: dropsome.json  dropsome.ts
web/src/pages/: _app.tsx  _document.tsx  claim.tsx  index.tsx  refund.tsx
web/src/pages/api/drop/: receiver.ts
web/src/styles/: globals.css
web/src/types/: appState.ts  record.ts
web/src/utils/: apiHandlerHelpers.ts  constants.ts  encryption.ts  errorHandler.ts  rateLimiter.ts  wallet.ts
web/src/views/: index.tsx
web/src/views/claim/: index.tsx
web/src/views/drop/: index.tsx
web/src/views/refund/: index.tsx
(+1 files in other folders)
