[package]
name = "dropsome"
version = "0.7.0"
description = "Dropsome is a DeFi app for sharing funds with newcomers"
edition = "2021"
authors = ["Dropsome <dev@dropsome.xyz>"]
license = "Apache-2.0"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib", "lib"]
name = "dropsome"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = {version ="0.31.1", features = ["init-if-needed"]}
